row and column ~ layout

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -62,7 +62,7 @@ flutter:
   assets:
     - assets/loli1.png
     - assets/loli2.png
-
+    - assets/loli3.png
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware
 
